--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,15 @@
     </header>
     <hr>
     <div id="content">            
-
         
+        <div id="about">
+            <div>
+                <h1>About</h1>
+            </div>
+            <div>
+                <img src="./assets/images/hero.jpg" alt="">
+            </div>
+        </div>
     </div>
     <hr>
     <footer>
